# TileGame

./: .gitignore  CMakeLists.txt  build.bat  build.sh  conanfile.txt  install.bat  install.sh
src/: Global.hpp  Includes.hpp  Item.cpp  Item.hpp  Logger.cpp  Logger.hpp  Tile.cpp  Tile.hpp  Types.hpp  World.cpp  World.hpp  main.cpp
